<resources>
    <string name="app_name">Park</string>
    <string name="login_email">Email</string>
    <string name="login_password">password</string>
    <string name="login_sign_in">sign_in</string>
    <string name="login_register">register</string>

    <!--Firebase Strings -->
    <string name="register_text">Email Registration</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_register">Register</string>
    <string name="main_menu_sign_out">Sign out</string>
    <string name="main_menu_add_parking_spot">I ParkShare!</string>

    <!-- Colections -->
    <string name="collection_users">Users</string>
    <string name="collection_user_location">User Location</string>
    <string name="collection_parking_spots">Parking Spots</string>

    <!-- Links -->
    <string name="terms_and_conditions_link">I accept the
        <a href="https://www.termsfeed.com/blog/terms-conditions-mobile-apps/"> terms and conditions </a>
    </string>
    <string name="register_telephone">Telephone</string>

</resources>