<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/relLayout1"
                android:padding="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/register_text"
                    android:textSize="25sp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp"
                    android:id="@+id/tv_register_text"/>


                <EditText
                    android:id="@+id/et_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:inputType="textEmailAddress"
                    android:hint="@string/register_email"
                    android:layout_below="@+id/tv_register_text"/>


                <EditText
                    android:id="@+id/et_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/register_password"
                    android:layout_below="@+id/et_register_email"/>

                <EditText
                    android:id="@+id/et_register_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:inputType="textPassword"
                    android:hint="@string/register_confirm_password"
                    android:layout_below="@+id/et_register_password"/>


                <Button
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="35dp"
                    android:layout_below="@+id/et_register_confirm_password"
                    android:text="@string/register_register" />

            </RelativeLayout>
        </RelativeLayout>
    </ScrollView>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/pb_register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:visibility="invisible"/>

</RelativeLayout>